Fix alignemnt of submit button for new post form

--- a/app/stylesheets/builtin-pages/timeline.less
+++ b/app/stylesheets/builtin-pages/timeline.less
@@ -238,7 +238,8 @@
       background: var(--theme-color-faded);
       padding: 15px;
 
-      .btn.new-post {
+      .actions {
+        text-align: right;
         margin-top: 15px;
       }
 
@@ -256,15 +257,18 @@
       }
 
       textarea,
-      .avatar {
+      .avatar-container {
         display: inline-block;
+      }
+
+      .avatar-container {
+        vertical-align: top;
       }
 
       .avatar {
         width: 35px;
         height: 35px;
         margin-right: 10px;
-        vertical-align: top;
       }
     }
   }
